--- a/static/css/common.sass
+++ b/static/css/common.sass
@@ -1,10 +1,11 @@
-.main-display
-	display: flex
-	.main-side-bar
-		width: 20%
-		padding: 10px
-	.main-content
-		width: 80%
-		padding: 10px
-	.column-title
-		font-weight: 900
+html, body
+	background: #e6e6e6
+
+.top-bar
+	background-color: #1779ba
+	color: white
+	.menu
+		background-color: inherit
+	.button
+		color: inherit
+		font-weight: 600
