--- a/templates/itemForm.html
+++ b/templates/itemForm.html
@@ -4,6 +4,48 @@
 	<title></title>
 </head>
 <body>
+	<nav class="top-bar">
+		<div class="top-bar-left">
+			<ul class="menu">
+				<li class="menu-text">Catalog Web Application</li>
+			</ul>
+		</div>
+		<div class="top-bar-right">
+			<ul class="menu">
+				<li><a class="button success" href="{{url_for('newItem')}}">{{ 'New Items' }}</a></li>
+				<li><a class="button success" href="{{url_for('newCatagory')}}">{{ 'New Catagory' }}</a></li>
+				<li><button type="button" class="button success">{{ 'Login' }}</button></li>
+			</ul>
+		</div>
+	</nav>
+	<main class="main-display">
+		<div class="main-content">
+			<form method="POST" action="{{url_for('newItem')}}">
+				<div class="input-container">
+					Name: <input type="text" name="name">
+					Catagory: 
+					<select name="catagory_id">
+						{% for cata in catagory %}
+							<option value="{{cata.id}}">{{cata.name}}</option>
+						{% endfor %}
+					</select>
+					Description: <textarea name="description"></textarea>
+				</div>
+				<div class="button-container">
+					<button class="button alert" type="submit">Submit</button>
+					<a class="button" href="{{url_for('indexDisplay')}}">Return</a>
+				</div>
+			</form>
+		</div>
+	</main>
 
+
+	<link rel="stylesheet" href="{{ url_for('static', filename='css/foundation.min.css') }}">
+	<link rel="stylesheet" href="{{ url_for('static', filename='css/common.css') }}">
+	<link rel="stylesheet" href="{{ url_for('static', filename='css/singleColumnCommon.css') }}">
+	<link rel="stylesheet" href="{{ url_for('static', filename='css/delete.css') }}">
+	<script src="{{ url_for('static', filename='js/vendor/jquery.js') }}"></script>
+	<script src="{{ url_for('static', filename='js/vendor/what-input.js') }}"></script>
+	<script src="{{ url_for('static', filename='js/vendor/foundation.min.js') }}"></script>
 </body>
 </html>
