--- a/templates/viewItem.html
+++ b/templates/viewItem.html
@@ -34,6 +34,7 @@
 				</section>
 			</div>
 			<div class="operation-container">
+				<a href="{{url_for('editItem', item_id=id)}}">Edit</a>
 				<a href="{{url_for('deleteItem', item_id=id)}}">Delete</a>
 			</div>
 		</div>
