--- a/templates/delete.html
+++ b/templates/delete.html
@@ -14,7 +14,7 @@
 			<ul class="menu">
 				<li><a class="button success" href="{{url_for('newItem')}}">{{ 'New Items' }}</a></li>
 				<li><a class="button success" href="{{url_for('newCatagory')}}">{{ 'New Catagory' }}</a></li>
-				<li><button type="button" class="button success">{{ 'Login' }}</button></li>
+				<li><a class="button success" href="{{url_for('fbdisconnect')}}">{{ 'Logout' }}</a></li>
 			</ul>
 		</div>
 	</nav>
